--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^26.0.24",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.34",
     "@types/supertest": "^2.0.12",
@@ -61,10 +61,11 @@
     "jest": "^26.6.3",
     "lint-staged": "^12.4.1",
     "nodemon": "^2.0.16",
+    "ntl": "^5.1.0",
     "prettier": "^2.6.2",
     "prisma": "^3.14.0",
-    "supertest": "^6.2.3",
-    "ts-jest": "^26.5.5",
+    "supertest": "^6.3.1",
+    "ts-jest": "^26.5.6",
     "ts-node": "^10.7.0",
     "tsconfig-paths": "3.9.0",
     "ttypescript": "^1.5.13",
